[project]
name = "ss-cairn"
version = "0.1.0"
description = "SurvivalStack Centralized Logging"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
