[project]
# Canonical naming decision: Enforcing 'cairn' for 1:1:1 mapping across registry, pyproject, folder, and import name.
name = "cairn"
version = "0.1.0"
description = "SurvivalStack Centralized Logging"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
